...
    const val PREF_WEBVIEW_READER_MODE_FONT: String = UserPreferenceKeys.READER_MODE_FONT
    const val PREF_WEBVIEW_READER_MODE_FONT_SIZE: String = UserPreferenceKeys.READER_MODE_FONT_SIZE
    const val PREF_ARCHIVE_REDIRECT_DOMAINS: String = UserPreferenceKeys.ARCHIVE_REDIRECT_DOMAINS
    const val PREF_STORIES_TO_CACHE: String = UserPreferenceKeys.STORIES_TO_CACHE
    const val PREF_FAVICON_PROVIDER: String = UserPreferenceKeys.FAVICON_PROVIDER
    const val PREF_ADDITIONAL_FRONTPAGES: String = UserPreferenceKeys.ADDITIONAL_FRONTPAGES
    const val FRONT_PAGE_CLASSIC: String = "Classic"
    const val FRONT_PAGE_BEST_COMMENTS: String = "Best Comments"
    const val FRONT_PAGE_HIGHLIGHTS: String = "Highlights"
    const val FRONT_PAGE_ACTIVE: String = "Active"
    const val FRONT_PAGE_FRONT: String = "Front"
    const val PRELOAD_WEBVIEW_ALWAYS: String = "always"
    const val PRELOAD_WEBVIEW_ONLY_WIFI: String = "onlywifi"
...
