<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:id="@+id/submissions_comment_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingBottom="4dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/submissions_comment_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/product_sans"
                android:textColor="?attr/textColorDisabled"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:text="On 'We found and fixed' a rare race condition in our sessions handling'" />

            <LinearLayout
                android:id="@+id/submissions_comment_header_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/submissions_comment_header_loading_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans"
                    android:text="On"
                    android:textColor="?attr/textColorDisabled"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.simon.harmonichackernews.widget.BoxShimmerLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:importantForAccessibility="no"
                    app:boxShimmerBaseAlpha="0.15"
                    app:boxShimmerDuration="2000"
                    app:boxShimmerHighlightAlpha="0.17">

                    <View
                        android:layout_width="150dp"
                        android:layout_height="17dp"
                        android:background="@drawable/smooth_rectangle_drawable" />

                </com.simon.harmonichackernews.widget.BoxShimmerLayout>

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/submissions_comment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="8dp"
            android:background="@drawable/submissions_comment_time_background"
            android:fontFamily="@font/product_sans_bold"
            android:minHeight="22dp"
            android:paddingStart="7dp"
            android:paddingTop="2.5dp"
            android:paddingEnd="7dp"
            android:paddingBottom="1.5dp"
            android:textColor="?attr/textColorDisabled"
            android:textSize="12sp"
            android:translationY="-1dp"
            tools:text="21m" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <org.sufficientlysecure.htmltextview.HtmlTextView
            android:id="@+id/submissions_comment_body"
            android:ellipsize="end"
            android:maxLines="16"
            android:textSize="15sp"
            tools:text="> While our log analysis, conducted from March 5 through March 8, confirmed that this was a rare issue, it could not rule out the possibility that a session had been incorrectly returned but then never used. This was not a risk we were willing to take, given the potential impact of even one of these incorrectly returned sessions being used.\n\n It is funny how they make it seem like they are super cautious. When in fact they had no other choice than do it when you rephrase the problem as 'there were maybe some people who got the admin right of the github account of some of our customers'"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/storyColorNormal"
            android:fontFamily="@font/product_sans"/>

        <View
            android:id="@+id/submissions_comment_scrim"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="6dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:textSize="14sp"
            style="@style/Widget.Material3Expressive.Button.IconButton.Outlined"
            android:id="@+id/submissions_comment_button_story"
            android:textColor="?attr/storyColorNormal"
            android:text="Story"
            app:icon="@drawable/ic_newspaper"
            app:iconTint="?attr/storyColorNormal"
            android:fontFamily="@font/product_sans_bold"
            android:layout_marginRight="2dp"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"/>

        <Button
            android:textSize="14sp"
            style="@style/Widget.Material3Expressive.Button.IconButton.Outlined"
            android:id="@+id/submissions_comment_button_replies"
            android:textColor="?attr/storyColorNormal"
            app:icon="@drawable/ic_reply"
            app:iconTint="?attr/storyColorNormal"
            android:fontFamily="@font/product_sans_bold"
            android:text="Replies"
            android:layout_marginLeft="2dp"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"/>


    </LinearLayout>

</LinearLayout>
